# polder

./: .gitignore  README.md  pyproject.toml
.github/: check_charts.yaml  webapp.yaml
.github/workflows/: check_charts.yaml  webapp.yaml
ETL/: config.json  curl-get-data.sh
config/: README.md  aoi.geojson  package.json
config/src/: NUTS_RG_20M_2024_3857.geojson  generate_aoi.js
deployment/helm/: debug.yaml
deployment/helm/polder/: Chart.yaml  values.yaml
deployment/helm/webapp-polder/: Chart.yaml  debug.yaml  values.yaml
deployment/helm/webapp-polder/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployment/helm2/polder/: Chart.yaml  values.yaml
deployment/helm2/polder/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployment/k8s/: deploy.yaml
dockerfiles/: Dockerfile
helm/: Chart.yaml  values.yaml
helm/charts/: eoapi-0.4.17.tgz
helm/templates/: Webapp.yml
webapp/: .env  Dockerfile  README.md  package.json  tsconfig.json
webapp/app/: index.html  main.tsx
webapp/app/_custom-types/: types.d.ts
webapp/app/components/: error-bounday.tsx
webapp/app/components/aois/: data-indicator.tsx  index.tsx  indicator-settings.tsx  map-options.tsx  point-stats-popover.tsx  point-stats.tsx  reference-line.tsx  settings.tsx  share-options.tsx
webapp/app/components/common/: about-drawer.tsx  copy-field.ts  (+9 more)
webapp/app/styles/: theme.ts
webapp/app/utils/: config.ts  date.ts  loaders.ts  usa-stable-display-props.ts  utils.ts
(+31 files in other folders)
